--- a/package.json
+++ b/package.json
@@ -7,11 +7,13 @@
     "@tsparticles/slim": "^3.8.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "dotenv": "^16.4.7",
     "lucide-react": "^0.419.0",
     "mini-svg-data-uri": "^1.4.4",
     "motion": "^12.4.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "recharts": "^2.15.1",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
     "tsparticles": "^3.8.1"
