--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
   },
   "name": "react-vite-tailwind-prettier",
   "private": true,
+  "license": "MIT",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
