--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
     "lucide-react": "^0.419.0",
     "mini-svg-data-uri": "^1.4.4",
     "motion": "^12.4.3",
+    "next-themes": "^0.4.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "recharts": "^2.15.1",
+    "sonner": "^2.0.1",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
     "tsparticles": "^3.8.1"
